# CoronaEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  code-format.ps1  code-tidy.ps1
Docs/: BUILD.md  (+1 more)
Examples/: CMakeLists.txt  Examples1.hpp  Examples2.hpp  Examples3.hpp  Examples4.hpp  frag.glsl  lfq_stress.cpp  main.cpp  main.py  vert.glsl
Examples/assest/model/: armadillo.mtl
Examples/assest/shaders/: test.frag.glsl
Examples/assets/model/: Ball.mtl
Examples/assets/shaders/: test.comp.glsl  test.vert.glsl
Examples/concurrent_basics/: CMakeLists.txt  README.md  concurrent_basics.cpp
Examples/concurrent_containers/: CMakeLists.txt  concurrent_containers.cpp
Examples/concurrent_performance/: concurrent_performance.cpp
Examples/concurrent_queue_performance/: CMakeLists.txt  concurrent_queue_performance.cpp
Examples/concurrent_queue_usage/: CMakeLists.txt  concurrent_queue_usage.cpp
Examples/interactive_rendering/: CMakeLists.txt  interactive_rendering.cpp
Examples/lfq_correctness/: CMakeLists.txt  lfq_correctness.cpp
Examples/lfq_stress/: CMakeLists.txt  lfq_stress.cpp
Examples/multi_window_rendering/: CMakeLists.txt
Examples/python_scripting/: CMakeLists.txt  python_scripting.cpp
Examples/queue_smoke/: CMakeLists.txt  queue_smoke.cpp
Examples/queue_usage/: CMakeLists.txt  queue_usage.cpp
Examples/resource_management/: CMakeLists.txt  resource_management.cpp
Examples/shard_performance_comparison/: CMakeLists.txt  shard_performance_comparison.cpp
Src/: CMakeLists.txt  CabbageFramework.cpp  CabbageFramework.h  Engine.cpp  Engine.h  Utils.h
Src/Core/: Components.h  CoronaEngineAPI.cpp  CoronaEngineAPI.h  Engine.cpp  Engine.h  ILogger.h  Log.cpp  Log.h  Logger.cpp  Logger.h  SafeDataCache.h
Src/Core/Engine/: Engine.cpp  Engine.h  ISystem.h  ThreadedSystem.h
Src/Core/IO/: IResource.h  IResourceLoader.h  ResMgr.cpp  ResMgr.h  Resource.cpp  Resource.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  ResourceTypes.cpp  ResourceTypes.h
Src/Core/Thread/: SafeCommandQueue.h  SafeCommandQueue.hpp  SafeDataCache.h
Src/ECS/: BackBridge.cpp  BackBridge.h  Components.h  Core.cpp  Core.h  Events.hpp  FrontBridge.cpp  FrontBridge.h  Global.cpp  Global.h  ISystem.cpp  ISystem.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  TaskScheduler.h
Src/Multimedia/: BaseAnimationSystem.cpp  BaseAnimationSystem.hpp  BaseAudioSystem.cpp  BaseAudioSystem.hpp  BaseDisplaySystem.cpp  BaseDisplaySystem.hpp  BaseMultimediaSystem.cpp  BaseMultimediaSystem.h  BaseMultimediaSystem.hpp  BaseRenderingSystem.cpp  BaseRenderingSystem.hpp  Multimedia.cpp  Multimedia.h
Src/Multimedia/Animation/: AnimationSystem.cpp  AnimationSystem.h  AnimationSystemDefault.cpp  AnimationSystemDefault.h  AnimationSystemDefault.hpp
Src/Multimedia/Audio/: AudioSystem.cpp  AudioSystem.h  AudioSystemDefault.cpp  AudioSystemDefault.h  AudioSystemDefault.hpp
Src/Multimedia/Display/: DisplaySystemDefault.cpp  DisplaySystemDefault.h  DisplaySystemDefault.hpp
Src/Multimedia/Rendering/: RenderingSystem.cpp  RenderingSystem.h  (+3 more)
Src/Resource/: Animation.cpp  Animation.h  AnimationState.h  Bone.cpp  Bone.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Resource.cpp  Resource.hpp  ResourceLoader.cpp  ResourceLoader.hpp  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h
Src/Utils/: CabbageLogger.h  CabbageLogger.hpp  SafeCommandQueue.hpp
Utility/Concurrent/: CMakeLists.txt  README.md  concurrent.cpp
Utility/Logger/: CMakeLists.txt  Log.cpp
Utility/ResourceManager/: BinaryResource.cpp  CMakeLists.txt  ResourceManager.cpp  ResourceTypes.cpp  TextResource.cpp
arch_impl/: CMakeLists.txt
arch_impl/examples/: README.md  sample_manifest.json
arch_impl/src/: plugin_manifest.cpp  runtime_coordinator.cpp  service_collection.cpp  service_provider.cpp  system_descriptor.cpp
arch_impl/tests/: service_and_messaging_tests.cpp
engine/: CMakeLists.txt  RuntimeLoop.cpp  RuntimeLoop.h  main.cpp
examples/: CMakeLists.txt
examples/concurrent_performance/: CMakeLists.txt
examples/concurrent_stability/: CMakeLists.txt  concurrent_stability.cpp
examples/corona_framework/: CMakeLists.txt  README.md  main.cpp  sample_manifest.json
examples/engine/: BUILD_AND_RUN.md  CMakeLists.txt  README.md  main.cpp
examples/interactive_rendering/: interactive_rendering.cpp
examples/main/: CMakeLists.txt
examples/minimal_runtime_loop/: CMakeLists.txt  CustomLoop.h  DiagnosticsSystem.h  main.cpp
examples/multi_window_rendering/: CMakeLists.txt  multi_window_rendering.cpp
examples/python_scripting/: python_scripting.cpp
examples/resource_management/: CMakeLists.txt  resource_management.cpp
examples/system_hubs_sanity/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  engine.cpp  engine.h  shared_data_hub.cpp
src/core/: CMakeLists.txt  CoronaEngineAPI.cpp  Engine.cpp  EngineKernel.cpp  SystemRegistry.cpp
src/framework/: CMakeLists.txt
src/include/: CoronaEngineAPI.h
src/interfaces/: CMakeLists.txt
src/resource/: Bone.cpp  Bone.h  CMakeLists.txt  Mesh.h  Model.cpp  Shader.h
src/script/: CMakeLists.txt  corona_engine_api.cpp  engine_bindings.cpp  python_api.cpp
src/systems/: CMakeLists.txt
src/thread/: CMakeLists.txt
src/utility/: CMakeLists.txt
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt
tests/framework/: CMakeLists.txt  command_channel_tests.cpp  data_projection_tests.cpp  event_stream_tests.cpp  logging_multithread_performance_tests.cpp  logging_performance_tests.cpp  logging_service_tests.cpp  messaging_hub_tests.cpp  plugin_manifest_failure_tests.cpp  plugin_manifest_file_example.cpp  plugin_manifest_tests.cpp  runtime_coordinator_tests.cpp  runtime_dependency_tests.cpp  service_and_messaging_tests.cpp  service_container_tests.cpp  test_registry.h  test_support.h  thread_orchestrator_tests.cpp  time_service_tests.cpp
utility/: CMakeLists.txt
utility/concurrent/: CMakeLists.txt
utility/logger/: CMakeLists.txt
utility/resource_manager/: CMakeLists.txt
(+439 files in other folders)
